--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "todolist-mvc",
+  "name": "todo-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Professional Todo List",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "better-sqlite3": "^12.5.0",
-    "cors": "^2.8.5",
-    "express": "^5.2.1"
+    "express": "^4.18.2"
   }
 }
